testdata/baselines/reference/submodule/conformance/parserArrowFunctionExpression17.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
fileJs.js(1,1): error TS2304: Cannot find name 'a'.
fileJs.js(1,5): error TS2304: Cannot find name 'b'.
fileJs.js(1,15): error TS2304: Cannot find name 'd'.
fileJs.js(1,20): error TS2304: Cannot find name 'e'.
fileTs.ts(1,1): error TS2304: Cannot find name 'a'.
fileTs.ts(1,5): error TS2304: Cannot find name 'b'.
fileTs.ts(1,15): error TS2304: Cannot find name 'd'.
fileTs.ts(1,20): error TS2304: Cannot find name 'e'.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== fileJs.js (4 errors) ====
    a ? b : (c) : d => e // Not legal JS; "Unexpected token ':'" at last colon
    ~
!!! error TS2304: Cannot find name 'a'.
        ~
!!! error TS2304: Cannot find name 'b'.
                  ~
!!! error TS2304: Cannot find name 'd'.
                       ~
!!! error TS2304: Cannot find name 'e'.
    
==== fileTs.ts (4 errors) ====
    a ? b : (c) : d => e
    ~
!!! error TS2304: Cannot find name 'a'.
        ~
!!! error TS2304: Cannot find name 'b'.
                  ~
!!! error TS2304: Cannot find name 'd'.
                       ~
!!! error TS2304: Cannot find name 'e'.
    